# bot-devschool-2

./: pyproject.toml
app/: main.py  settings.py
app/bot/handlers/: __init__.py  cancelhandler.py  postcreatinghandler.py  starthandler.py
app/bot/kb/: cancelkb.py  picturedenykb.py  startkb.py  svyatkb.py  timekb.py
app/utils/: time.py
