[tool.poetry]
name = "bot-dev-2"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nychyk <nychyk.oleksandr@lll.kpi.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
aiohttp = "^3.9.1"
async = "^0.6.2"
fastapi = "^0.108.0"
jinja2 = "^3.1.2"
mypy = "^1.8.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
ruff = "^0.1.11"
emoji = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
